[CombatController.tick()] small bug fix: i wasnt copying effects